# neuroreg

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml  pytest.yml
dev/: genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/neuroreg/bbreg/: register.html
dev/_modules/neuroreg/cli/: bbreg.html  coreg.html  lta.html  mri.html  multireg.html  robreg.html  segreg.html  sys_info.html  vol2vol.html
dev/_modules/neuroreg/imreg/: coreg.html  gd.html  robreg.html
dev/_modules/neuroreg/multireg/: register.html
dev/_modules/neuroreg/segreg/: atlas.html  centroids.html  io.html  labels.html  points.html  register.html
dev/_modules/neuroreg/transforms/: afni.html  antsmat.html  fsl.html  itk.html  lta.html  matrices.html  metrics.html  niftyreg.html  regdat.html  xfm.html
dev/_sources/api/: bbreg.rst.txt  cli.rst.txt  index.rst.txt  public.rst.txt  segreg.rst.txt  transforms.rst.txt
dev/_sources/cli/: index.rst.txt
dev/api/: bbreg.html  cli.html  imreg.html  index.html  public.html  segreg.html  transforms.html
dev/cli/: index.html
doc/: conf.py  index.md  notebooks.rst  references.bib
doc/api/: bbreg.rst  cli.rst  imreg.rst  index.rst  public.rst  segreg.rst  transforms.rst
doc/cli/: index.rst
ipynb/: .gitignore  example.ipynb
neuroreg/: __init__.py  _sys_info.py
neuroreg/bbreg/: __init__.py  io.py  optimize.py  projection.py  register.py  sampling.py
neuroreg/cli/: __init__.py  bbreg.py  coreg.py  lta.py  mri.py  multireg.py  robreg.py  robreg_gd.py  segcentroids.py  segreg.py  sys_info.py  vol2vol.py
neuroreg/image/: __init__.py  binarize.py  bspline.py  centroid.py  compare.py  geometry.py  info.py  io.py  map.py  masking.py  pyramid.py  segmentation.py
neuroreg/imreg/: __init__.py  coreg.py  device.py  gd.py  init.py  irls.py  losses.py  optimize.py  powell.py  reg_model.py  robreg.py  robreg_gd.py
neuroreg/multireg/: __init__.py  geometry.py  register.py  template.py
neuroreg/segreg/: __init__.py  atlas.py  centroids.py  io.py  labels.py  points.py  register.py
neuroreg/segreg/data/: fsaverage.json  fsaverage_centroids.json  fsaverage_data.json  mni_icbm152_t1_tal_nlin_asym_09c.json
neuroreg/transforms/: __init__.py  afni.py  antsmat.py  fsl.py  io.py  itk.py  lta.py  matrices.py  metrics.py  niftyreg.py  regdat.py  xfm.py
nireg/: __init__.py  _sys_info.py  register.py
nireg/bbreg/: cost.py  io.py  projection.py  register.py
nireg/cli/: __init__.py  bbreg.py  lta.py  robreg.py  robreg_gd.py  sys_info.py
nireg/cmdline/: __init__.py  bbreg.py  lta.py  lta_diff.py  robreg.py  robreg_irls.py
nireg/image/: __init__.py  centroid.py  map.py  pyramid.py  segmentation.py  smooth.py
nireg/imreg/: __init__.py  irls.py  optimize.py  reg_model.py  robreg.py  robreg_gd.py  robust.py
nireg/nn/: __init__.py  reg_model.py  reg_model_sym.py  stopper.py  training.py
nireg/surface/: __init__.py  cost.py  io.py  optimize.py  projection.py  sampling.py
nireg/transforms/: __init__.py  initialize.py  irls.py  lta.py  matrices.py  metrics.py  weighted_rigid.py
notebooks/: .gitignore  example.ipynb  robreg.ipynb
robreg/: __init__.py  register.py
robreg/cmdline/: __init__.py  bbreg.py  robreg.py
robreg/image/: __init__.py  centroid.py  map.py  pyramid.py  smooth.py
robreg/nn/: reg_model.py  reg_model_sym.py  training.py
robreg/surface/: __init__.py  cost.py  io.py  optimize.py  projection.py  sampling.py
robreg/transforms/: __init__.py  headers.py  initialize.py  lta.py  matrices.py  transforms.py
robreg/utils/: _config.py
tests/: test_bbreg.py  test_cli.py  test_coreg.py  test_image.py  test_irls.py  test_lta.py  test_lta_diff.py  test_mri.py  test_multireg.py  test_multireg_cli.py  test_pyramid_register.py  test_robreg.py  test_robust_weights.py  test_segreg.py  test_vol2vol.py  test_weighted_rigid.py
