[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'neuroreg'
version = '0.4.0-dev'
description = 'A package for 3D neuroimaging registration with PyTorch.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.10'
authors = [{name = 'Martin Reuter'}]
maintainers = [{name = 'Martin Reuter'}]
keywords = [
    'python',
    'Registration',
    '3D Image',
    'MRI',
    'PyTorch',
]
classifiers = [
    'Operating System :: OS Independent',
    'Environment :: Console',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]
dependencies = [
    'nibabel>=5.1',
    'numpy>=1.25',
    'psutil',
    'scikit-image>=0.21',
    'scipy>=1.11',
    'torch>=2.0.1',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'furo!=2023.8.17',
    'matplotlib>=3.5',
    'memory-profiler',
    'myst-parser',
    'numpydoc',
    'sphinx>=7.3,<8',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-gallery',
    'sphinx-issues',
    'sphinx-argparse',
    'pypandoc',
    'nbsphinx',
    'IPython', # For syntax highlighting in notebooks
    'ipykernel',
]
style = [
    'bibclean',
    'codespell',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest>=8.2.2',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'neuroreg[build]',
    'neuroreg[doc]',
    'neuroreg[style]',
    'neuroreg[test]',
]
full = [
    'neuroreg[all]',
]

[project.urls]
homepage = 'https://Deep-MI.github.io/neuroreg/dev/index.html'
documentation = 'https://Deep-MI.github.io/neuroreg/dev/index.html'
source = 'https://github.com/Deep-MI/neuroreg'
tracker = 'https://github.com/Deep-MI/neuroreg/issues'

[project.scripts]
robreg          = "neuroreg.cli.robreg:main"
coreg           = "neuroreg.cli.coreg:main"
bbreg           = "neuroreg.cli.bbreg:main"
segreg          = "neuroreg.cli.segreg:main"
lta             = "neuroreg.cli.lta:main"
neuroreg-sys_info  = "neuroreg.cli.sys_info:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['neuroreg*']
exclude = ['neuroreg*tests']

[tool.setuptools.package-data]
"neuroreg.segreg" = ["data/*.json"]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^neuroreg.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 120
extend-exclude = [
    "doc",
    ".github",
    "data",
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
    # "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["E501"]   # ignore too long lines in example ipynb
"notebooks/*.ipynb" = ["E402"]

[tool.codespell]
#ignore-words-list = 'coo,daty'
check-filenames = true
check-hidden = true
skip = './.git,./build,./.mypy_cache,./.pytest_cache,./.venv,./doc-build,*/data/*,./neuroreg-data,./scratch,./.agent-work,./.agentbridge'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
testpaths = ['tests']
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/neuroreg/_version.py',
    '**/neuroreg/cli/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
